--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,25 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'LatoLight';
+  src: url("../public/Lato-Light.ttf");
+}
+@font-face {
+  font-family: 'LatoBold';
+  src: url("../public/Lato-Bold.ttf");
+}
+@font-face {
+  font-family: 'LatoRegular';
+  src: url("../public/Lato-Regular.ttf");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -15,12 +33,4 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+
